--- a/src/com/resources/login.fxml
+++ b/src/com/resources/login.fxml
@@ -40,7 +40,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="274.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Controller.Login">
+<VBox prefHeight="274.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/21.0.5" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Controller.LoginController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="513.0" VBox.vgrow="ALWAYS">
       <children>
